--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pmndrs/branding": "^0.0.8",
     "@react-three/drei": "^9.80.3",
     "@react-three/fiber": "^8.13.7",
     "@types/node": "20.5.0",
@@ -23,6 +24,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "three": "^0.155.0",
     "typescript": "5.1.6"
