--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "three": "^0.155.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "valtio": "^1.11.2"
   }
 }
